# HiddenGuard

./: Dockerfile  HiddenGuard_Colab.ipynb  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: bench_latency.py  scan_image.py
src/: README.md
src/hidden_guard/: cata.py  cmca.py  config.py  pipeline.py  wsd.py
src/hidden_guard/api/: app.py  schemas.py
src/hidden_guard/eval/: ablation.py
src/hidden_guard/utils/: image_io.py  metrics.py  stego_lsb.py
