[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hidden-guard"
version = "0.1.0"
description = "Real-time detection and mitigation of steganographic prompt injection for MLLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="HiddenGuard Authors"}]
dependencies = []
